@@ -5,6 +5,7 @@ Date: ???
     - Disabled Resin to Rubber recipe
     - Reblanced Insulated wire recipe to increase rubber consumption
     - Removed Glass smelting 1 as prerequisite for Sniper Rifle
+    - Reduced Electrolyser volume
   Bugfixes:
     - Fixed startup error with Mad Clown's mods enabled
     - Hid gunmetal item, recipes, and tech
